rgw: reshard cancel command should clear the resharding flag

Fixes: http://tracker.ceph.com/issues/21619
Signed-off-by: Orit Wasserman <owasserm@redhat.com>